--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
    <link rel="stylesheet" href="css/custom.css">
    <link rel="stylesheet" href="css/fontello.css" type="text/css">
    
+   
 </head>
 <body>
 
@@ -60,37 +61,44 @@
                   <li><i class="demo-icon icon-ok"><span>Analizuj swój budżet aby lepiej nim zarządzać.</span></i></li>
                   <li><i class="demo-icon icon-ok"><span>Zacznij już dzisiaj korzystać z aplikacji Twój budżet.</span></i></li>
                </ul>
-               <img class="img-fluid d-none d-md-block p-5" src="img/mainChart.png" alt="main chart">
+               <img class="img-fluid d-none d-lg-block p-5" src="img/mainChart.png" alt="main chart">
             </div>
           <!-- fomrm & inputs -->
             <div class="col-md-6 col-lg pe-3">
-               <form>
+               <form action="login.html" class="needs-validation" novalidate>
                   <div class="mb-3 mt-5">
-                     <label for="inputName1" class="form-label">Podaj swoje imię</label>
-                     <input type="text" class="form-control fs-5 pt-3 pb-3 shadow-none" id="exampleInputPassword1">
-                   </div>
+                     <label for="inputName1" class="form-label fs-5">Podaj swoje imię</label>
+                     <input type="text" class="form-control fs-5 pt-3 pb-3 shadow-none" id="inputName1" minlength="4" required>
+                     <div class="invalid-feedback">
+                        Wprowadź poprawne imię (min. 4 znaki)
+                     </div>
+                  </div>
                   <div class="mb-3">
-                    <label for="inputEmail1" class="form-label">Podaj swój adres email</label>
-                    <input type="email" class="form-control fs-5 pt-3 pb-3 shadow-none" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <label for="inputEmail1" class="form-label fs-5">Podaj swój adres email</label>
+                    <input type="email" class="form-control fs-5 pt-3 pb-3 shadow-none" id="inputEmail1" aria-describedby="emailHelp" required>
+                    <div class="invalid-feedback">
+                     Wprowadź poprawny adres e-mail
+                  </div>
                     <div id="emailHelp" class="form-text">Nigdy nie udostepnimy nikomu twojego adresu</div>
                   </div>
                   <div class="mb-3">
-                    <label for="inputPassword1" class="form-label">Utwórz swoje hasło</label>
-                    <input type="password" class="form-control fs-5 pt-3 pb-3 shadow-none" id="exampleInputPassword1">
+                    <label for="inputPassword1" class="form-label fs-5">Utwórz swoje hasło</label>
+                    <input type="password" class="form-control fs-5 pt-3 pb-3 shadow-none" id="inputPassword1" minlength="5" required>
+                    <div class="invalid-feedback">
+                     Wprowadź poprawne hasło (min. 5 znaków)
+                  </div> 
                   </div>
-                  
                   <button type="submit" class="btn btn-light p-3">Zarejestruj się</button>
                 </form>
+                <script src="js/script.js"></script>
             </div>
-
          </div>
       </div>
    </section>
 </div>
- 
    <footer>
       <div class="container-fluid my-5 text-white text-center pt-5 pb-5 bg-dark">
-         <h1>Profesjonalnie buduj swój kapitał osobisty!</h1>
+         <p class="fs-1 fw-bold">Profesjonalnie buduj swój kapitał osobisty!</p>
       </div>
       <div class="my-5">
          <h5 class="text-center fs-6">© 2021 Twój budżet osobisty. All rights reserved.</h5>
