--- a/balancePeriod.html
+++ b/balancePeriod.html
@@ -109,6 +109,7 @@
                      </div>
                      <button type="submit" value="showBalance" class="btn btn-light p-4"
                         onclick="showBalance(); return false;">Pokaż bilans</button>
+                        <a href="#" name="settings" class="btn btn-warning py-4 px-2">Ustawienia</a>
                      <script src="js/script.js"></script>
                   </form>
 
